@@ -9,10 +9,13 @@ Since 0.2.13
       focus thread pane
     * CTRL-RETURN (customizable): same, but select all results
     * ESCAPE: cancel search, focus thread pane
+  - new "Save and Go" feature
 
   - make Nostalgy work with TB 3.0 (tested with 3.0a1pre)
   - Thunderbirds shortcuts that are hidden by Nostalgy can now
     be used (type "Escape" before)
+  - ask for a confirmation when cancelling changes (with Escape)
+    in the preference dialog
   - bug fix: custom shortcuts are now working in stand-alone message windows
   - bug fix: custom shortcuts with no modifier are not recognized when typing
     in a text box (QuickSearch or Nostalgy's completion box)
